--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "blobcache",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "dist/boundle.js",
+  "main": "./dist/boundle.js",
+  "types": "./dist/boundle.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "test": "jest --config jestconfig.json",
+    "build": "webpack && tsc --emitDeclarationOnly"
   },
   "repository": {
     "type": "git",
@@ -26,11 +27,17 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.14",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "jest": "^26.5.3",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "files": [
+    "dist/**/*"
+  ]
 }
