--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "blobcache",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "./dist/boundle.js",
-  "types": "./dist/boundle.d.ts",
+  "main": "./dist/BlobCache.js",
+  "types": "./dist/BlobCache.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "webpack && tsc --emitDeclarationOnly"
+    "build": "webpack --config webpack.prod.js && tsc --emitDeclarationOnly",
+    "buildDev": "webpack --config webpack.dev.js && tsc --emitDeclarationOnly"
   },
   "repository": {
     "type": "git",
@@ -36,7 +37,9 @@
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "webpack-merge": "^5.2.0"
+  },
   "files": [
     "dist/**/*"
   ]
