--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "blobcache",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "",
   "main": "./dist/BlobCache.js",
   "types": "./dist/BlobCache.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "webpack --config webpack.prod.js && tsc --emitDeclarationOnly",
-    "buildDev": "webpack --config webpack.dev.js && tsc --emitDeclarationOnly"
+    "build": "webpack --config webpack.prod.js",
+    "buildDev": "webpack --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -21,18 +21,11 @@
   },
   "homepage": "https://github.com/woodxiang/blobcache#readme",
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.14",
-    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "jest": "^26.5.3",
     "ts-jest": "^26.4.1",
+    "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
