--- a/jestconfig.json
+++ b/jestconfig.json
@@ -3,5 +3,7 @@
     "^.+\\.(t|j)sx?$": "ts-jest"
   },
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-  "moduleFileExtensions": ["ts", "js"]
+  "moduleFileExtensions": ["ts", "js"],
+  "collectCoverage": true,
+  "rootDir":"src"
 }
