--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "blobcache",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "./dist/BlobCache.js",
   "types": "./dist/BlobCache.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "tsc"
+    "build": "tsc",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
+    "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,11 @@
   "homepage": "https://github.com/woodxiang/blobcache#readme",
   "devDependencies": {
     "@types/jest": "^26.0.14",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-typescript-prettier": "^3.1.0",
+    "fake-indexeddb": "^3.1.2",
     "jest": "^26.5.3",
+    "prettier": "^2.1.2",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
