--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blobcache",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "./dist/BlobCache.js",
   "types": "./dist/BlobCache.d.ts",
@@ -31,8 +31,5 @@
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
-  "dependencies": {},
-  "files": [
-    "dist/**/*"
-  ]
+  "dependencies": {}
 }
